--- a/index.html
+++ b/index.html
@@ -4,4 +4,5 @@
 	<script type="text/javascript" src="lib/jquery-1.10.2.min.js"></script>
 	<script type="text/javascript" src="params.js"></script>
 	<script type="text/javascript" src="parse.js"></script>
+	<script type="text/javascript" src="main.js"></script>
 </html>
