--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html>
 	<body>
 	<script type="text/javascript" src="lib/jquery-1.10.2.min.js"></script>
-	<script type="text/javascript" src="params.js"></script>
+	<!--<script type="text/javascript" src="params.js"></script>
 	<script type="text/javascript" src="parse.js"></script>
-	<script type="text/javascript" src="main.js"></script>
+	<script type="text/javascript" src="main.js"></script>-->
+	<script src="all.js"></script>
+	<script>
+		doAll();
+	</script>
 </html>
