--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html>
 	<body>
-	<script type="text/javascript" src="lib/jquery-1.10.2.min.js"></script>
-	<!--<script type="text/javascript" src="params.js"></script>
-	<script type="text/javascript" src="parse.js"></script>
-	<script type="text/javascript" src="main.js"></script>-->
-	<script src="all.js"></script>
-	<script>
-		doAll();
-	</script>
+
+		<!--html content-->
+		<div id="content">
+
+		</div>
+
+		<!--scripts-->
+		<script type="text/javascript" src="lib/jquery-1.10.2.min.js"></script>
+		<script type="text/javascript" src="params.js"></script>
+		<script type="text/javascript" src="parse.js"></script>
+		<script type="text/javascript" src="main.js"></script>
+
+		<!-- for ALL in one script -->
+		<!--
+		<script src="all.js"></script>
+		<script>
+			doAll();
+		</script>
+		-->
+	</body>
 </html>
