re-format spreadsheet data

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 
 		<!--html content-->
 		<div id="content">
+			<form id="inputForm">
+
+			</form>
+			<div id="results"></div>
 		</div>
 
 		<!--scripts-->
