--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<!--html content-->
 		<div id="content">
 			<form id="inputForm">
-
 			</form>
+			<button id="submitButton">Who am I?</button>
 			<div id="results"></div>
 		</div>
 
