Revert "update index"
This reverts commit a022e4489216f815947b9278678b27742b40e3f7.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<h1>Who am I?</h1>
-	</head>
 	<body>
 
 		<!--html content-->
@@ -15,10 +12,10 @@
 
 		<!--scripts-->
 		<script type="text/javascript" src="lib/jquery-1.10.2.min.js"></script>
-		<script type="text/javascript" src="src/params.js"></script>
-		<script type="text/javascript" src="src/parse.js"></script>
-		<script type="text/javascript" src="src/input.js"></script>
-		<script type="text/javascript" src="src/main.js"></script>
+		<script type="text/javascript" src="params.js"></script>
+		<script type="text/javascript" src="parse.js"></script>
+		<script type="text/javascript" src="input.js"></script>
+		<script type="text/javascript" src="main.js"></script>
 
 		<!-- for ALL in one script -->
 		<!--
