--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 		</div>
 
 		<!--scripts-->
-		<script type="text/javascript" src="lib/jquery-1.10.2.min.js"></script>
-		<script type="text/javascript" src="params.js"></script>
-		<script type="text/javascript" src="parse.js"></script>
-		<script type="text/javascript" src="input.js"></script>
-		<script type="text/javascript" src="main.js"></script>
+		<script type="text/javascript" src="./lib/jquery-1.10.2.min.js"></script>
+		<script type="text/javascript" src="./src/params.js"></script>
+		<script type="text/javascript" src="./src/parse.js"></script>
+		<script type="text/javascript" src="./src/input.js"></script>
+		<script type="text/javascript" src="./src/main.js"></script>
 
 		<!-- for ALL in one script -->
 		<!--
