--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<link href="css/bootstrap.min.css" rel="stylesheet">
+		<link href="css/my_style.css" rel="stylesheet">
+	</head>
 	<body>
-
 		<!--html content-->
 		<div id="content">
+			<h1>Which Rapper Are You?</h1>
 			<form id="inputForm">
 			</form>
 			<button id="submitButton">Who am I?</button>
@@ -11,12 +15,12 @@
 		</div>
 
 		<!--scripts-->
-		<script type="text/javascript" src="./lib/jquery-1.10.2.min.js"></script>
-		<script type="text/javascript" src="./src/params.js"></script>
-		<script type="text/javascript" src="./src/parse.js"></script>
-		<script type="text/javascript" src="./src/input.js"></script>
-		<script type="text/javascript" src="./src/main.js"></script>
-
+		<script type="text/javascript" src="lib/jquery-1.10.2.min.js"></script>
+		<!--<script type="text/javascript" src="js/bootstrap.min.js"></script>-->
+		<script type="text/javascript" src="src/params.js"></script>
+		<script type="text/javascript" src="src/parse.js"></script>
+		<script type="text/javascript" src="src/input.js"></script>
+		<script type="text/javascript" src="main.js"></script>
 		<!-- for ALL in one script -->
 		<!--
 		<script src="all.js"></script>
