questions template comp

--- a/questions.html
+++ b/questions.html
@@ -1,76 +1,80 @@
 
-<strong>When you were a kid, how did you listen to music?</strong><br>
-<input type="radio" name="Age_AudioFormat" id="" value=""><label for="">MP3</label><br>
-<input type="radio" name="Age_AudioFormat" id="" value=""><label for="">Mixtapes</label><br>
-<input type="radio" name="Age_AudioFormat" id="" value=""><label for="">CDs</label><br>
-<input type="radio" name="Age_AudioFormat" id="" value=""><label for="">Cassettes</label><br>
-<input type="radio" name="Age_AudioFormat" id="" value=""><label for="">Vinyl</label><br>
+<strong>What decade do you identify with most?</strong><br>
+<input type="radio" name="Decade" id="decade1" value=""><label for="decade1">1970s</label><br>
+<input type="radio" name="Decade" id="decade2" value=""><label for="decade2">1980s</label><br>
+<input type="radio" name="Decade" id="decade3" value=""><label for="decade3">1990s</label><br>
+<input type="radio" name="Decade" id="decade4" value=""><label for="decade4">2000s</label><br>
+<input type="radio" name="Decade" id="decade5" value=""><label for="decade5">2010s</label><br>
 
 <strong>What region do you identify with most?</strong><br>
-<input type="radio" name="" id="" value=""><label for="">Dirty South</label><br>
-<input type="radio" name="" id="" value=""><label for="">West Coast</label><br>
-<input type="radio" name="" id="" value=""><label for="">East Coast</label><br>
-<input type="radio" name="" id="" value=""><label for="">Mid West</label><br>
-<input type="radio" name="" id="" value=""><label for="">None of the above</label><br>
+<input type="radio" name="Region" id="region1" value=""><label for="region1">Dirty South</label><br>
+<input type="radio" name="Region" id="region2" value=""><label for="region2">West Coast</label><br>
+<input type="radio" name="Region" id="region3" value=""><label for="region3">East Coast</label><br>
+<input type="radio" name="Region" id="region4" value=""><label for="region4">Mid West</label><br>
+<input type="radio" name="Region" id="region5" value=""><label for="region5">None of the above</label><br>
 
 <strong>How would you describe your fashion sensibilities?</strong><br>
-<input type="radio" name="" id="" value=""><label for="">T shirt & Jeans</label><br>
-<input type="radio" name="" id="" value=""><label for="">Hipster</label><br>
-<input type="radio" name="" id="" value=""><label for="">Thuggin'</label><br>
-<input type="radio" name="" id="" value=""><label for="">Upscale</label><br>
-<input type="radio" name="" id="" value=""><label for="">Avant-garde</label><br>
+<input type="radio" name="Fashion" id="fashion1" value=""><label for="fashion1">T shirt & Jeans</label><br>
+<input type="radio" name="Fashion" id="fashion2" value=""><label for="fashion2">Hipster</label><br>
+<input type="radio" name="Fashion" id="fashion3" value=""><label for="fashion3">Thuggin'</label><br>
+<input type="radio" name="Fashion" id="fashion4" value=""><label for="fashion4">Upscale</label><br>
+<input type="radio" name="Fashion" id="fashion5" value=""><label for="fashion5">Avant-garde</label><br>
 
 <strong>Do you have a criminal history?  Check all that apply:</strong><br>
-<input type="radio" name="" id="" value=""><label for="">Drug possession</label><br>
-<input type="radio" name="" id="" value=""><label for="">Assault</label><br>
-<input type="radio" name="" id="" value=""><label for="">I might have killed someone</label><br>
-<input type="radio" name="" id="" value=""><label for="">Just some petty bullshit</label><br>
-<input type="radio" name="" id="" value=""><label for="">I'm clean</label><br>
+<input type="checkbox" name="CriminalHistory" id="criminal1" value=""><label for="criminal1">Drug possession</label><br>
+<input type="checkbox" name="CriminalHistory" id="criminal2" value=""><label for="criminal2">Assault</label><br>
+<input type="checkbox" name="CriminalHistory" id="criminal3" value=""><label for="criminal3">I might have killed someone</label><br>
+<input type="checkbox" name="CriminalHistory" id="criminal4" value=""><label for="criminal4">Just some petty bullshit</label><br>
+<input type="checkbox" name="CriminalHistory" id="criminal5" value=""><label for="criminal5">I'm clean</label><br>
 
 <strong>How would you describe your body type?</strong><br>
-<input type="radio" name="" id="" value=""><label for="">I'm athletic</label><br>
-<input type="radio" name="" id="" value=""><label for="">I'm average</label><br>
-<input type="radio" name="" id="" value=""><label for="">I'm skinny</label><br>
-<input type="radio" name="" id="" value=""><label for="">I love food</label><br>
+<input type="radio" name="Food_Fitness_Body" id="fitness1" value=""><label for="fitness1">I'm athletic</label><br>
+<input type="radio" name="Food_Fitness_Body" id="fitness2" value=""><label for="fitness2">I'm average</label><br>
+<input type="radio" name="Food_Fitness_Body" id="fitness3" value=""><label for="fitness3">I'm skinny</label><br>
+<input type="radio" name="Food_Fitness_Body" id="fitness4" value=""><label for="fitness4">I love food</label><br>
 
 <strong>How would you describe your intelligence?</strong><br>
-<input type="radio" name="" id="" value=""><label for="">I'm the genius CEO and you better recognize</label><br>
-<input type="radio" name="" id="" value=""><label for="">I always know what's up</label><br>
-<input type="radio" name="" id="" value=""><label for="">I'm not booksmart</label><br>
-<input type="radio" name="" id="" value=""><label for="">I might not be smart</label><br>
+<input type="radio" name="Intelligence" id="intelligence1" value=""><label for="intelligence1">I'm the genius CEO and you better recognize</label><br>
+<input type="radio" name="Intelligence" id="intelligence2" value=""><label for="intelligence2">I always know what's up</label><br>
+<input type="radio" name="Intelligence" id="intelligence3" value=""><label for="intelligence3">I'm not booksmart</label><br>
+<input type="radio" name="Intelligence" id="intelligence4" value=""><label for="intelligence4">I might not be smart</label><br>
 
 <strong>How strong is your pimp hand? </strong><br>
-<input type="radio" name="" id="" value=""><label for="">Legit Pimp</label><br>
-<input type="radio" name="" id="" value=""><label for="">I'm not a player</label><br>
-<input type="radio" name="" id="" value=""><label for="">I've got a special person in my life</label><br>
-<input type="radio" name="" id="" value=""><label for="">Wouldn't you like to know</label><br>
+<input type="radio" name="PimpHand" id="pimp1" value=""><label for="pimp1">Legit Pimp</label><br>
+<input type="radio" name="PimpHand" id="pimp2" value=""><label for="pimp2">I'm not a player</label><br>
+<input type="radio" name="PimpHand" id="pimp3" value=""><label for="pimp3">I've got a special person in my life</label><br>
+<input type="radio" name="PimpHand" id="pimp4" value=""><label for="pimp4">Wouldn't you like to know</label><br>
 
 <strong>Do you have any tattoos? </strong><br>
-<input type="radio" name="" id="" value=""><label for="">Yeah</label><br>
-<input type="radio" name="" id="" value=""><label for="">Yeah</label><br>
-<input type="radio" name="" id="" value=""><label for="">Yeah</label><br>
-<input type="radio" name="" id="" value=""><label for="">Nope</label><br>
+<input type="radio" name="Tattoos" id="tattoos1" value=""><label for="tattoos1">Yeah</label><br>
+<input type="radio" name="Tattoos" id="tattoos2" value=""><label for="tattoos2">Yeah</label><br>
+<input type="radio" name="Tattoos" id="tattoos3" value=""><label for="tattoos3">Yeah</label><br>
+<input type="radio" name="Tattoos" id="tattoos4" value=""><label for="tattoos4">Nope</label><br>
 
 <strong>Describe your sound (check all that apply):</strong><br>
-<input type="radio" name="" id="" value=""><label for="">Classic</label><br>
-<input type="radio" name="" id="" value=""><label for="">Underground / Alternative</label><br>
-<input type="radio" name="" id="" value=""><label for="">Pop</label><br>
-<input type="radio" name="" id="" value=""><label for="">Dirty South</label><br>
-<input type="radio" name="" id="" value=""><label for="">Trap</label><br>
-<input type="radio" name="" id="" value=""><label for="">Always changing</label><br>
+<input type="checkbox" name="Sound" id="sound1" value=""><label for="sound1">Classic</label><br>
+<input type="checkbox" name="Sound" id="sound2" value=""><label for="sound2">Underground / Alternative</label><br>
+<input type="checkbox" name="Sound" id="sound3" value=""><label for="sound3">Pop</label><br>
+<input type="checkbox" name="Sound" id="sound4" value=""><label for="sound4">Dirty South</label><br>
+<input type="checkbox" name="Sound" id="sound5" value=""><label for="sound5">Trap</label><br>
+<input type="checkbox" name="Sound" id="sound6" value=""><label for="sound6">Always changing</label><br>
 
 <strong>Drink of choice  (check all that apply):</strong><br>
-<input type="radio" name="" id="" value=""><label for="">Beer</label><br>
-<input type="radio" name="" id="" value=""><label for="">Champagne/Wine</label><br>
-<input type="radio" name="" id="" value=""><label for="">Top shelf liquor</label><br>
-<input type="radio" name="" id="" value=""><label for="">Bottom shelf liquor</label><br>
-<input type="radio" name="" id="" value=""><label for="">Mountain Dew</label><br>
+<input type="checkbox" name="DrinkOfChoice" id="drink1" value=""><label for="drink1">Beer</label><br>
+<input type="checkbox" name="DrinkOfChoice" id="drink2" value=""><label for="drink2">Champagne/Wine</label><br>
+<input type="checkbox" name="DrinkOfChoice" id="drink3" value=""><label for="drink3">Top shelf liquor</label><br>
+<input type="checkbox" name="DrinkOfChoice" id="drink4" value=""><label for="drink4">Bottom shelf liquor</label><br>
+<input type="checkbox" name="DrinkOfChoice" id="drink5" value=""><label for="drink5">Mountain Dew</label><br>
 
 <strong>Drug of choice (check all that apply):</strong><br>
-<input type="radio" name="" id="" value=""><label for="">None</label><br>
-<input type="radio" name="" id="" value=""><label for="">Weed</label><br>
-<input type="radio" name="" id="" value=""><label for="">Crack / Cocaine</label><br>
-<input type="radio" name="" id="" value=""><label for="">Lean (aka Sizzurp)</label><br>
-<input type="radio" name="" id="" value=""><label for="">Acid</label><br>
-<input type="radio" name="" id="" value=""><label for="">Molly</label><br>
-<input type="radio" name="" id="" value=""><label for="">Pills</label><br>
+<input type="checkbox" name="DrugOfChoice" id="drug1" value=""><label for="drug1">None</label><br>
+<input type="checkbox" name="DrugOfChoice" id="drug2" value=""><label for="drug2">Weed</label><br>
+<input type="checkbox" name="DrugOfChoice" id="drug3" value=""><label for="drug3">Crack / Cocaine</label><br>
+<input type="checkbox" name="DrugOfChoice" id="drug4" value=""><label for="drug4">Lean (aka Sizzurp)</label><br>
+<input type="checkbox" name="DrugOfChoice" id="drug5" value=""><label for="drug5">Acid</label><br>
+<input type="checkbox" name="DrugOfChoice" id="drug6" value=""><label for="drug6">Molly</label><br>
+<input type="checkbox" name="DrugOfChoice" id="drug7" value=""><label for="drug7">Pills</label><br>
+
+
+    <script type="text/javascript" src="lib/jquery-1.10.2.min.js"></script>
+
