no need for manhattan anymore

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<input type="radio" name="Fashion" id="fashion5" value="Avant-garde"><label for="fashion5">Avant-garde</label><br>
 
 				<strong>Do you have a criminal history?  Check all that apply:</strong><br>
-				<input type="checkbox" name="CriminalHistory" id="criminal1" value="Drugs"><label for="criminal1">Drug possession</label><br>
+				<input type="checkbox" name="CriminalHistory" id="criminal1" value="Drug possession, Drug dealer"><label for="criminal1">Drug possession</label><br>
 				<input type="checkbox" name="CriminalHistory" id="criminal2" value="Assault"><label for="criminal2">Assault</label><br>
 				<input type="checkbox" name="CriminalHistory" id="criminal3" value="Might have killed someone"><label for="criminal3">I might have killed someone</label><br>
 				<input type="checkbox" name="CriminalHistory" id="criminal4" value="Minor"><label for="criminal4">Just some petty bullshit</label><br>
@@ -39,7 +39,7 @@
 
 				<strong>How would you describe your body type?</strong><br>
 				<input type="radio" name="Food_Fitness_Body" id="fitness1" value="athletic"><label for="fitness1">I'm athletic</label><br>
-				<input type="radio" name="Food_Fitness_Body" id="fitness2" value="average"><label for="fitness2">I'm average</label><br>
+				<input type="radio" name="Food_Fitness_Body" id="fitness2" value="average, stocky"><label for="fitness2">I'm average</label><br>
 				<input type="radio" name="Food_Fitness_Body" id="fitness3" value="skinny"><label for="fitness3">I'm skinny</label><br>
 				<input type="radio" name="Food_Fitness_Body" id="fitness4" value="fat"><label for="fitness4">I love food</label><br>
 
@@ -79,7 +79,7 @@
 				<strong>Drug of choice (check all that apply):</strong><br>
 				<input type="checkbox" name="DrugOfChoice" id="drug1" value="None"><label for="drug1">None</label><br>
 				<input type="checkbox" name="DrugOfChoice" id="drug2" value="Weed"><label for="drug2">Weed</label><br>
-				<input type="checkbox" name="DrugOfChoice" id="drug3" value="Crack, Cocaine"><label for="drug3">Crack / Cocaine</label><br>
+				<input type="checkbox" name="DrugOfChoice" id="drug3" value="Crack"><label for="drug3">Crack / Cocaine</label><br>
 				<input type="checkbox" name="DrugOfChoice" id="drug4" value="Lean"><label for="drug4">Lean (aka Sizzurp)</label><br>
 				<input type="checkbox" name="DrugOfChoice" id="drug5" value="Acid"><label for="drug5">Acid</label><br>
 				<input type="checkbox" name="DrugOfChoice" id="drug6" value="Molly"><label for="drug6">Molly</label><br>
@@ -92,7 +92,8 @@
 		<!--scripts-->
 		<script type="text/javascript" src="lib/jquery-1.10.2.min.js"></script>
 		<!--<script type="text/javascript" src="js/bootstrap.min.js"></script>-->
-		<script type="text/javascript" src="src/params.js"></script>
+		
+		<!--<script type="text/javascript" src="src/params.js"></script>-->
 		<script type="text/javascript" src="src/parse.js"></script>
 		<script type="text/javascript" src="src/input.js"></script>
 		<script type="text/javascript" src="main.js"></script>
