--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 				<input type="checkbox" name="CriminalHistory" id="criminal5" value="None"><label for="criminal5">I'm clean, homie</label><br>
 
 				<strong>How would you describe your body type?</strong><br>
-				<input type="radio" name="Food_Fitness_Body" id="fitness1" value="athletic"><label for="fitness1">I'm athletic</label><br>
-				<input type="radio" name="Food_Fitness_Body" id="fitness2" value="average, stocky"><label for="fitness2">I'm average</label><br>
-				<input type="radio" name="Food_Fitness_Body" id="fitness3" value="skinny"><label for="fitness3">I'm skinny</label><br>
-				<input type="radio" name="Food_Fitness_Body" id="fitness4" value="fat"><label for="fitness4">I love food</label><br>
+				<input type="radio" name="Food_Fitness_BodyType" id="fitness1" value="athletic"><label for="fitness1">I'm athletic</label><br>
+				<input type="radio" name="Food_Fitness_BodyType" id="fitness2" value="average, stocky"><label for="fitness2">I'm average</label><br>
+				<input type="radio" name="Food_Fitness_BodyType" id="fitness3" value="skinny"><label for="fitness3">I'm skinny</label><br>
+				<input type="radio" name="Food_Fitness_BodyType" id="fitness4" value="fat"><label for="fitness4">I love food</label><br>
 
 				<strong>How would you describe your intelligence?</strong><br>
 				<input type="radio" name="Intelligence" id="intelligence1" value="Smart"><label for="intelligence1">I'm conscientious and my eloquence knows no bounds</label><br>
@@ -94,6 +94,8 @@
 		<!--<script type="text/javascript" src="js/bootstrap.min.js"></script>-->
 		
 		<!--<script type="text/javascript" src="src/params.js"></script>-->
+		<script type="text/javascript" src="src/matches.js"></script>
+		<script type="text/javascript" src="src/manhattan_distance.js"></script>
 		<script type="text/javascript" src="src/parse.js"></script>
 		<script type="text/javascript" src="src/input.js"></script>
 		<script type="text/javascript" src="main.js"></script>
