remove 70s, update 2pac in json

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<form id="inputForm">
 
 				<strong>What decade do you identify with most?</strong><br>
-				<input type="radio" name="Decade" id="decade1" value="1970s"><label for="decade1">1970s</label><br>
+				<!--<input type="radio" name="Decade" id="decade1" value="1970s"><label for="decade1">1970s</label><br>-->
 				<input type="radio" name="Decade" id="decade2" value="1980s"><label for="decade2">1980s</label><br>
 				<input type="radio" name="Decade" id="decade3" value="1990s"><label for="decade3">1990s</label><br>
 				<input type="radio" name="Decade" id="decade4" value="2000s"><label for="decade4">2000s</label><br>
