--- a/index.html
+++ b/index.html
@@ -94,9 +94,10 @@
 		<!--<script type="text/javascript" src="js/bootstrap.min.js"></script>-->
 		
 		<!--<script type="text/javascript" src="src/params.js"></script>-->
+		<!--<script type="text/javascript" src="src/manhattan_distance.js"></script>-->
 		<script type="text/javascript" src="src/matches.js"></script>
-		<script type="text/javascript" src="src/manhattan_distance.js"></script>
 		<script type="text/javascript" src="src/parse.js"></script>
+		<script type="text/javascript" src="src/parse_tester.js"></script>
 		<script type="text/javascript" src="src/input.js"></script>
 		<script type="text/javascript" src="main.js"></script>
 		<!-- for ALL in one script -->
