--- a/index.html
+++ b/index.html
@@ -90,22 +90,27 @@
 		</div>
 
 		<!--scripts-->
+		<!--lib-->
 		<script type="text/javascript" src="lib/jquery-1.10.2.min.js"></script>
 		<!--<script type="text/javascript" src="js/bootstrap.min.js"></script>-->
 		
+		<!--1/28 src unneeded-->
 		<!--<script type="text/javascript" src="src/params.js"></script>-->
 		<!--<script type="text/javascript" src="src/manhattan_distance.js"></script>-->
+		
+		<!-- 1/28 src needed -->
+		<!--
 		<script type="text/javascript" src="src/matches.js"></script>
 		<script type="text/javascript" src="src/parse.js"></script>
 		<script type="text/javascript" src="src/parse_tester.js"></script>
 		<script type="text/javascript" src="src/input.js"></script>
 		<script type="text/javascript" src="main.js"></script>
+		-->		
+
+
 		<!-- for ALL in one script -->
-		<!--
-		<script src="all.js"></script>
-		<script>
-			doAll();
-		</script>
-		-->
+		<script type="text/javascript" src="src/all.js"></script>
+		<!--<script type="text/javascript" src="main.js"></script>-->
+
 	</body>
 </html>
