--- a/index.html
+++ b/index.html
@@ -99,18 +99,17 @@
 		<!--<script type="text/javascript" src="src/manhattan_distance.js"></script>-->
 		
 		<!-- 1/28 src needed -->
-		<!--
+		
 		<script type="text/javascript" src="src/matches.js"></script>
 		<script type="text/javascript" src="src/parse.js"></script>
 		<script type="text/javascript" src="src/parse_tester.js"></script>
 		<script type="text/javascript" src="src/input.js"></script>
-		<script type="text/javascript" src="main.js"></script>
-		-->		
+		<script type="text/javascript" src="main_local.js"></script>
+			
 
 
 		<!-- for ALL in one script -->
-		<script type="text/javascript" src="src/all.js"></script>
-		<!--<script type="text/javascript" src="main.js"></script>-->
+		<!--<script type="text/javascript" src="src/all.js"></script>-->
 
 	</body>
 </html>
