--- a/wp-rapper-personality-quiz.html
+++ b/wp-rapper-personality-quiz.html
@@ -23,7 +23,8 @@
 				<input type="radio" name="Fashion" id="fashion5" value="Avant-garde"/><label for="fashion5">Avant-garde</label><br />
 
 				<strong>Do you have a criminal history?  Check all that apply:</strong><br />
-				<input type="checkbox" name="CriminalHistory" id="criminal1" value="Drug possession, Drug dealer"/><label for="criminal1">Drug possession</label><br />
+				<input type="checkbox" name="CriminalHistory" id="criminal1" value="Drug possession"/><label for="criminal1">Drug possession</label><br />
+				<input type="checkbox" name="CriminalHistory" id="criminal1" value="Drug dealer"/><label for="criminal1">Drug dealing</label><br />
 				<input type="checkbox" name="CriminalHistory" id="criminal2" value="Assault"/><label for="criminal2">Assault</label><br />
 				<input type="checkbox" name="CriminalHistory" id="criminal3" value="Might have killed someone"/><label for="criminal3">I might have killed someone</label><br />
 				<input type="checkbox" name="CriminalHistory" id="criminal4" value="Minor"/><label for="criminal4">Just some petty bullshit</label><br />
