--- a/wp-rapper-personality-quiz.html
+++ b/wp-rapper-personality-quiz.html
@@ -22,6 +22,18 @@
 				<input type="radio" name="Fashion" id="fashion4" value="Upscale"/><label for="fashion4">Upscale</label><br />
 				<input type="radio" name="Fashion" id="fashion5" value="Avant-garde"/><label for="fashion5">Avant-garde</label><br />
 
+				<strong>You're in your zone when you are...</strong><br />
+				<input type="radio" name="Zone" id="zone1" value="Chilling"/><label for="zone1">Chillin'</label><br />
+				<input type="radio" name="Zone" id="zone2" value="Making money"/><label for="zone2">Makin' money</label><br />
+				<input type="radio" name="Zone" id="zone3" value="Working out"/><label for="zone3">Working out</label><br />
+				<input type="radio" name="Zone" id="zone4" value="Dancing"/><label for="zone4">Dancing</label><br />
+				<input type="radio" name="Zone" id="zone5" value="Fighting"/><label for="zone5">Kickin' Ass</label><br />
+				<input type="radio" name="Zone" id="zone6" value="Playing video games"/><label for="zone6">Playing video games</label><br />
+				<input type="radio" name="Zone" id="zone7" value="Eating"/><label for="zone7">Eating a five-course meal</label><br />
+				<input type="radio" name="Zone" id="zone8" value="Building a stronger community"/><label for="zone8">Building a stronger community</label><br />
+
+
+
 				<strong>Do you have a criminal history?  Check all that apply:</strong><br />
 				<input type="checkbox" name="CriminalHistory" id="criminal1" value="Drug possession"/><label for="criminal1">Drug possession</label><br />
 				<input type="checkbox" name="CriminalHistory" id="criminal1" value="Drug dealer"/><label for="criminal1">Drug dealing</label><br />
