final changes before we go live

--- a/wp-rapper-personality-quiz.html
+++ b/wp-rapper-personality-quiz.html
@@ -26,7 +26,7 @@
 				<input type="radio" name="Zone" id="zone1" value="Chilling"/><label for="zone1">Chillin'</label><br />
 				<input type="radio" name="Zone" id="zone2" value="Making money"/><label for="zone2">Makin' money</label><br />
 				<input type="radio" name="Zone" id="zone3" value="Working out"/><label for="zone3">Working out</label><br />
-				<input type="radio" name="Zone" id="zone4" value="Dancing"/><label for="zone4">Getting your freak on</label><br />
+				<input type="radio" name="Zone" id="zone4" value="Getting your freak on"/><label for="zone4">Getting your freak on</label><br />
 				<input type="radio" name="Zone" id="zone5" value="Fighting"/><label for="zone5">Kickin' ass</label><br />
 				<input type="radio" name="Zone" id="zone6" value="Playing video games"/><label for="zone6">Playing video games</label><br />
 				<input type="radio" name="Zone" id="zone7" value="Eating"/><label for="zone7">Eating a five-course meal</label><br />
